fixed dao for daily weather to use xml parsing for data feed. fixed the daily adapter that uses the new dao feed.

--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_city_search.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_city_search.xml
@@ -56,21 +56,23 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/frame_frag_layout"
-        android:layout_above="@+id/adView"
+
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/performsearch">
     </FrameLayout>
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
-    </com.google.android.gms.ads.AdView>
+    <!--android:layout_above="@+id/adView"-->
+
+    <!--<com.google.android.gms.ads.AdView-->
+        <!--android:id="@+id/adView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--ads:adSize="BANNER"-->
+        <!--ads:adUnitId="@string/banner_ad_unit_id">-->
+    <!--</com.google.android.gms.ads.AdView>-->
 
     <EditText
         android:layout_width="wrap_content"
