--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/daily_weather_row_layout.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/daily_weather_row_layout.xml
@@ -174,7 +174,8 @@
         android:id="@+id/daily_pressure"
         android:layout_below="@+id/daily_cloud_pect"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="17dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -194,7 +195,8 @@
         android:id="@+id/daily_wind_deg"
         android:layout_below="@+id/daily_precipitation"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -265,4 +267,132 @@
         android:layout_above="@+id/daily_temp"
         android:layout_alignLeft="@+id/daily_temp_val"
         android:layout_alignStart="@+id/daily_temp_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_sym_name"
+        android:id="@+id/daily_sym_name"
+        android:layout_below="@+id/daily_wind_speed_name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_sym_name_val"
+        android:id="@+id/daily_sym_name_val"
+        android:layout_below="@+id/daily_wind_speed_name_val"
+        android:layout_alignLeft="@+id/daily_wind_speed_name_val"
+        android:layout_alignStart="@+id/daily_wind_speed_name_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_precipitation_type"
+        android:id="@+id/daily_precipitation_type"
+        android:layout_below="@+id/daily_precipitation"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_precip_type_val"
+        android:id="@+id/daily_precip_type_val"
+        android:layout_below="@+id/daily_precipitation_val"
+        android:layout_alignLeft="@+id/daily_precipitation_val"
+        android:layout_alignStart="@+id/daily_precipitation_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_dirr_code"
+        android:id="@+id/daily_wind_dirr_code"
+        android:layout_below="@+id/daily_wind_speed"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_dirr_code_val"
+        android:id="@+id/daily_wind_dirr_code_val"
+        android:layout_below="@+id/daily_wind_speed_val"
+        android:layout_alignLeft="@+id/daily_wind_speed_val"
+        android:layout_alignStart="@+id/daily_wind_speed_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_name"
+        android:id="@+id/daily_wind_name"
+        android:layout_below="@+id/daily_wind_dirr_code"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_name_val"
+        android:id="@+id/daily_wind_name_val"
+        android:layout_below="@+id/daily_wind_dirr_code_val"
+        android:layout_alignLeft="@+id/daily_wind_dirr_code_val"
+        android:layout_alignStart="@+id/daily_wind_dirr_code_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_speed_name"
+        android:id="@+id/daily_wind_speed_name"
+        android:layout_below="@+id/daily_wind_name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_wind_speed_name_val"
+        android:id="@+id/daily_wind_speed_name_val"
+        android:layout_below="@+id/daily_wind_name_val"
+        android:layout_alignLeft="@+id/daily_wind_name_val"
+        android:layout_alignStart="@+id/daily_wind_name_val"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_clouds"
+        android:id="@+id/daily_clouds"
+        android:layout_below="@+id/daily_cloud_pect"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="daily_clouds_val"
+        android:id="@+id/daily_clouds_val"
+        android:layout_below="@+id/daily_cloud_pect_val"
+        android:layout_alignLeft="@+id/daily_cloud_pect_val"
+        android:layout_alignStart="@+id/daily_cloud_pect_val"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageDailyView"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/daily_precipitation_val"
+        android:layout_toEndOf="@+id/daily_precipitation_val"/>
 </RelativeLayout>
