--- a/android_studio_proj/MyWeatherApp/app/src/main/res/menu/menu_hourly_weather.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/menu/menu_hourly_weather.xml
@@ -2,6 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="jmtechsvcs.myweatherapp.activitypkg.HourlyWeatherActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/hourly_menu_item"
+        android:title="@string/graph_hourly"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
