--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_hourly_graph.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_hourly_graph.xml
@@ -12,6 +12,19 @@
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="200dip"
-        android:id="@+id/graphViewId" />
+        android:id="@+id/graphViewId"
+        android:layout_below="@+id/temp_vs_time"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Temp vs Time(3hr)"
+        android:id="@+id/temp_vs_time"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
