updated build version to support upload to google play. fixed ui for relative view to work correctly.

--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/hourly_weather_row_layout.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/hourly_weather_row_layout.xml
@@ -11,7 +11,7 @@
         android:text="hourly_from_date"
         android:id="@+id/HourlyFromDate"
         android:layout_marginTop="41dp"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/imageViewHourly"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
