--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/hourly_weather_row_layout.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/hourly_weather_row_layout.xml
@@ -10,10 +10,10 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="hourly_from_date"
         android:id="@+id/HourlyFromDate"
-        android:layout_marginTop="41dp"
         android:layout_below="@+id/imageViewHourly"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="18dp"/>
 
     <TextView
         android:layout_width="wrap_content"
