updated code to supporting testing rss, spring and android uil image loader. added instrumentation test

--- a/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main.xml
@@ -77,5 +77,10 @@
             android:text="Start MM"
             android:id="@+id/button5" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/myImageView"/>
+
     </LinearLayout>
 </RelativeLayout>
